fix: give full height for card on small screen

--- a/src/assets/search.css
+++ b/src/assets/search.css
@@ -32,6 +32,7 @@
   z-index: -100;
   transition: 0.5s ease-in-out;
   width: 100%;
+  margin-top: 4rem;
 }
 
 .search-bar__visible {
